pls-types/src/snapshots/pls_types__key__tests__extract_e25519_private_key.snap
---
source: pls-types/src/key.rs
expression: key
---
Ed25519(
    Ed25519PrivateKey {
        key: 9d61b19deffd5a60ba844af492ec2cc44449c5697b326919703bac031cae7f60,
    },
)
