pls-types/src/snapshots/pls_types__key__tests__extract_key_usage.snap
---
source: pls-types/src/key.rs
expression: key_usage
---
KeyUsage {
    critical: true,
    digital_signature: true,
    non_repudiation: false,
    key_encipherment: false,
    data_encipherment: false,
    key_agreement: false,
    key_cert_sign: false,
    crl_sign: false,
    encipher_only: false,
    decipher_only: false,
}
