pls-types/src/snapshots/pls_types__key__tests__extract_public_key.snap
---
source: pls-types/src/key.rs
expression: public_key
---
Ok(
    CertPublicKey {
        usage: KeyUsage {
            critical: true,
            digital_signature: true,
            non_repudiation: false,
            key_encipherment: false,
            data_encipherment: false,
            key_agreement: false,
            key_cert_sign: false,
            crl_sign: false,
            encipher_only: false,
            decipher_only: false,
        },
        key: Ec {
            curve: Nid {
                raw: 415,
                long_name: "prime256v1",
                short_name: "prime256v1",
            },
            point: 02fc29be7644b44d981051859e504de37fd7dc15cfc33e30f1a00c5c456c641df5,
        },
        spki: 3059301306072a8648ce3d020106082a8648ce3d03010703420004fc29be7644b44d981051859e504de37fd7dc15cfc33e30f1a00c5c456c641df5bae83e41f11384cb854536a8e6213fb830b69076a783541839c22cb5716168b2,
    },
)
